mail is working

--- a/pages/jaisalmer.html
+++ b/pages/jaisalmer.html
@@ -16,14 +16,12 @@
         <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
         <script type="text/javascript">
             (function(){
-                emailjs.init("user_V92IPjtB2oUDazgkufIk5");
-        //        emailjs.send("vishnu_fernweh", "booking", {})
-         //       emailjs.send("vishnu_fernweh", "booking", {name : "Vishnu Poothery", email : "vishnupoothery@gmai.com", number :"9249947415"})
+                emailjs.init("user_MnlehDhTkdUUM2rMbUbvR");
+        
                 document.getElementById("click").onclick = sendMail;
             })();
             function sendMail(){
-             //   emailjs.send("vishnu_fernweh", "booking", {name : document.getElementById("name"), email : document.getElementById("email"), number : document.getElementById("number")});
-                emailjs.send("vishnu_fernweh", "booking", {name : "Vishnu Poothery", email : "vishnupoothery@gmai.com", number :"9249947415"});
+                emailjs.send("rahul_fernweh", "booking", {name : document.getElementById("name").value, email : document.getElementById("email").value, number : document.getElementById("number").value, dest : document.getElementById("dest").value});
             }
         </script>
     </head>
@@ -31,7 +29,7 @@
         <div class="navbar-fixed">
             <nav class="white" role="navigation">
                 <div class="nav-wrapper container">
-                    <a href="index.html" class="brand-logo"><img style="margin: 2px" class="responsive-img" src="../img/logo_transparent.png"></a>
+                    <a href="../index.html" class="brand-logo"><img style="margin: 2px" class="responsive-img" src="../img/logo_transparent.png"></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="badges.html">About</a></li>
                     </ul>
@@ -83,15 +81,14 @@
                 <h4><bold>CONTACT FORM</bold></h4>
                 <div class="row">
                     <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 5px">
-                        <form method="POST" action="mail.php">
+                      <!--  <form method="POST" action="mail.php"> -->
                             <input type="text" id="name" placeholder="Enter your name">
                             <input type="text" id="number" placeholder="Enter your contact number">
                             <input type="email" id="email" placeholder="Enter your email address">
                             <input type="hidden" id="dest" value="jaisalmer">
 
                             <input class="waves-effect waves-light btn" type="submit" value="SUBMIT" onclick="return sendMail();">
-                            <button onclick="sendMail()" id="click">Click Heres</button>
-                        </form>
+                    <!--    </form> -->
                     </div>
                 </div>
                 <h4><bold>POLICIES</bold></h4>
