--- a/index.html
+++ b/index.html
@@ -179,16 +179,18 @@
             </div>
 
             <div class="carousel carousel-slider hide-on-small-onlys">
-                <a class="carousel-item" href="#one!"><img class="hide-on-small-only" src="img/slider/2_1.jpg"></a>
+                <a class="carousel-item" href="#one!"><img class="hide-on-small-only" src="img/slider/2_5.jpg"></a>
                 <a class="carousel-item" href="#two!"><img class="hide-on-small-only" src="img/slider/2_2.jpg"></a>
-                <a class="carousel-item" href="#three!"><img class="hide-on-small-only" src="img/slider/2_3.jpg"></a>
+                <a class="carousel-item" href="#three!"><img class="hide-on-small-only" src="img/slider/2_1.jpg"></a>
                 <a class="carousel-item" href="#four!"><img class="hide-on-small-only" src="img/slider/2_4.jpg"></a>
+                <a class="carousel-item" href="#five!"><img class="hide-on-small-only" src="img/slider/2_3.jpg"></a>
             </div>
             <div class="carousel carousel-slider hide-on-med-and-up">
-                <a class="carousel-item" href="#one!"><img src="img/slider/m_2_1.jpg"></a>
+                <a class="carousel-item" href="#one!"><img src="img/slider/m_2_5.jpg"></a>
                 <a class="carousel-item" href="#two!"><img src="img/slider/m_2_2.jpg"></a>
-                <a class="carousel-item" href="#three!"><img src="img/slider/m_2_3.jpg"></a>
+                <a class="carousel-item" href="#three!"><img src="img/slider/m_2_1.jpg"></a>
                 <a class="carousel-item" href="#four!"><img src="img/slider/m_2_4.jpg"></a>
+                <a class="carousel-item" href="#five!"><img src="img/slider/m_2_3.jpg"></a>
             </div>
             <br>
             <div class="container">
@@ -202,7 +204,49 @@
                 </div>
             </div>
         </div>
+        <br>
+        <div class="container">
+            <h5 class="uppercase"><strong>EDITORIAL</strong></h5>
+            <div class="row">
+                <div class="col s12 m3 l3">
+                    <div class="card">
+                        <div class="card-image">
+                            </div>
+                            <img src="img/slider/d_ed1.jpg" class="circle responsive-img">
+                        
 
+                        <div class="card-content" style="height: 80px">
+                            <p class="center-align"><strong>HIKING THE 7 LAKE KASHMIR TRAIL</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col l1"></div>
+                <div class="col s12 m3 l3 hide-on-small-only">
+                    <div class="card">
+                         <div class="card-image">
+                            </div>
+                            <img src="img/slider/d_chalet.jpg" class="circle responsive-img">
+
+                        <div class="card-content" style="height: 80px">
+                            <p class="center-align"><strong>TAKE ME TO MY HAPPY PLACE</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col l1"></div>
+                <div class="col s12 m3 l3 hide-on-small-only">
+                    <div class="card">
+                         <div class="card-image">
+                            </div>
+                            <img src="img/slider/d_wedding.jpg" class="circle responsive-img">
+
+                        <div class="card-content" style="height: 80px">
+                            <p class="center-align"><strong>WARM LOVE IN ULTIMATE ROYALITYS</strong></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
 
         <!--
