--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <div class="nav-wrapper container">
                     <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo_transparent.png"></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="badges.html">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">About</a></li>
                     </ul>
                 </div>
             </nav>
