--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
         <div class="slider">
             <ul class="slides">
                 <li>
-                    <img class="responsive-img" src="img/1.jpg"> 
+                    <img class="responsive-img" src="img/slider/1.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img class="responsive-img" src=img/2.jpg> 
-                    <div class="caption left-align">
-                        <h3>Left Aligned Caption</h3>
+                    <img class="responsive-img" src=img/slider/2.jpg> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img class="responsive-img" src="img/3.jpg"> 
-                    <div class="caption right-align">
-                        <h3>Right Aligned Caption</h3>
+                    <img class="responsive-img" src="img/slider/3.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img class="responsive-img" src="img/4.jpg"> 
+                    <img class="responsive-img" src="img/slider/4.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
