--- a/escape.html
+++ b/escape.html
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m3 l3 hide-on-small-only">
+                <div class="col s12 m3 l3">
                     <div class="card  z-depth-4">
                         <div class="card-image">
                             <img src="img/e_allapuzha.jpg">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m3 l3 hide-on-small-only">
+                <div class="col s12 m3 l3">
                     <div class="card  z-depth-4">
                         <div class="card-image">
                             <img src="img/e_ooty.jpg">
