--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
                 <li>
                     <img class="responsive-img" src="img/slider/1.jpg"> 
                     <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <!--       <h3>This is our big Tagline!</h3>
+<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>    -->
                     </div>
                 </li>
                 <li>
                     <img class="responsive-img" src=img/slider/2.jpg> 
                     <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <!--       <h3>This is our big Tagline!</h3>
+<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>    -->
                     </div>
                 </li>
                 <li>
                     <img class="responsive-img" src="img/slider/3.jpg"> 
                     <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <!--       <h3>This is our big Tagline!</h3>
+<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>    -->
                     </div>
                 </li>
                 <li>
                     <img class="responsive-img" src="img/slider/4.jpg"> 
                     <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                        <!--       <h3>This is our big Tagline!</h3>
+<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>    -->
                     </div>
                 </li>
             </ul>
@@ -213,9 +213,9 @@
                 <div class="col s12 m3 l3">
                     <div class="card">
                         <div class="card-image">
-                            </div>
-                            <img src="img/slider/d_ed1.jpg" class="circle responsive-img">
-                        
+                        </div>
+                        <img src="img/slider/d_ed1.jpg" class="circle responsive-img">
+
 
                         <div class="card-content" style="height: 80px">
                             <p class="center-align"><strong>HIKING THE 7 LAKE KASHMIR TRAIL</strong></p>
@@ -225,9 +225,9 @@
                 <div class="col l1"></div>
                 <div class="col s12 m3 l3 hide-on-small-only">
                     <div class="card">
-                         <div class="card-image">
-                            </div>
-                            <img src="img/slider/d_chalet.jpg" class="circle responsive-img">
+                        <div class="card-image">
+                        </div>
+                        <img src="img/slider/d_chalet.jpg" class="circle responsive-img">
 
                         <div class="card-content" style="height: 80px">
                             <p class="center-align"><strong>TAKE ME TO MY HAPPY PLACE</strong></p>
@@ -237,9 +237,9 @@
                 <div class="col l1"></div>
                 <div class="col s12 m3 l3 hide-on-small-only">
                     <div class="card">
-                         <div class="card-image">
-                            </div>
-                            <img src="img/slider/d_wedding.jpg" class="circle responsive-img">
+                        <div class="card-image">
+                        </div>
+                        <img src="img/slider/d_wedding.jpg" class="circle responsive-img">
 
                         <div class="card-content" style="height: 80px">
                             <p class="center-align"><strong>WARM LOVE IN ULTIMATE ROYALITYS</strong></p>
