--- a/pages/allapuzha.html
+++ b/pages/allapuzha.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
         <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-        <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>4
+        <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
         <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
         <script type="text/javascript">
