--- a/pages/allapuzha.html
+++ b/pages/allapuzha.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h4><bold>DESCRIPTION</bold></h4>
                 <div class="row">
-                    <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 2px">
+                    <div class="col l9 m9 s12" style="padding-bottom: 2px">
                         <p>Kerala is synonymous with backwaters as the backwaters are with Alleppey. Alleppey is famous for its vast network of waterways and hence is also called the ‘Venice of the East’. But apart from its grid of canals and backwaters, Alleppey is also known for its fresh greenery, tiny villages, and coddy shops.  </p>
                         <div class="col l6 m6 s6">&#8377; 1500</div>
                         <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
@@ -65,7 +65,7 @@
                 </div>
                 <h4><strong>ITINERARY</strong></h4>
                 <div class="row">
-                    <div class="col l9 m9 s12 z-depth-3">
+                    <div class="col l9 m9 s12">
                         <h5>DAY 1</h5>
                         <p>
                             Upon your arrival at Kochi airport or the railway station, you will be welcomed by our representative. Proceed to the next destination on your itinerary while enjoying the scenic routes filled with lush palm trees and the natural beauty of “God’s own country.” Complete check-in formalities at the hotel in Alleppey, and get over the fatigue from your journey by enjoying a refreshing overnight stay at the hotel.
@@ -82,7 +82,7 @@
                 </div>
                 <h4><bold>INCLUSIONS</bold></h4>
                 <div class="row">
-                    <ul class="col l9 m9 s12 z-depth-3 collection">
+                    <ul class="col l9 m9 s12 collection">
                         <li class="collection-item">Transportation to and from hotel.</li>
                         <li class="collection-item">Tea/Coffee and Snacks, Lunch, Dinner and Breakfast.</li>
                         <li class="collection-item">Camel Safari</li>
@@ -93,7 +93,7 @@
                 </div>
                 <h4><bold>CONTACT FORM</bold></h4>
                 <div class="row">
-                    <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 5px">
+                    <div class="col l9 m9 s12" style="padding-bottom: 5px">
 
                         <input type="text" id="name" placeholder="Enter your name">
                         <input type="text" id="number" placeholder="Enter your contact number">
@@ -106,7 +106,7 @@
                 </div>
                 <h4><bold>POLICIES</bold></h4>
                 <div class="row">
-                    <ul class="col l9 m9 s12 z-depth-3 collection">
+                    <ul class="col l9 m9 s12 collection">
                         <li class="collection-item">According to government regulations, a valid Photo ID has to be carried by every person above the age of 18 staying at the hotel. The identification proofs accepted are Drivers License, Voters Card, Passport, Ration Card. Without valid ID the guest will not be allowed to check in. Note- PAN Cards will not be accepted as a valid ID card</li>
                         <li class="collection-item">Personal expenses such as laundry, telephone calls, room service, alcoholic beverages, mini bar etc., are not included</li>
                         <li class="collection-item">If payment is not made as per the schedule provided in the first booking confirmation e-mail, Fernweh reserves the right to cancel the booking after attempting to get in touch with you. Refunds would be as per the package cancellation policy</li>
@@ -146,7 +146,7 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
                 var map = new google.maps.Map(document.getElementById("map"), mapOptions);
             }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script> 
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2wHLMB2yD8Ci_hpzrUkB38_Gnudkjxi4&callback=myMap"></script> 
 
     </body>
 </html>
