--- a/pages/allapuzha.html
+++ b/pages/allapuzha.html
@@ -147,6 +147,8 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
             }
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key='AIzaSyC2wHLMB2yD8Ci_hpzrUkB38_Gnudkjxi4'&callback=myMap"></script> 
+        <script src="https://maps.googleapis.com/maps/api/js?key='AIzaSyC2wHLMB2yD8Ci_hpzrUkB38_Gnudkjxi4'&callback=initMap" async defer></script>
+
 
     </body>
 </html>
