--- a/pages/jaisalmer.html
+++ b/pages/jaisalmer.html
@@ -136,7 +136,7 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
                 var map = new google.maps.Map(document.getElementById("map"), mapOptions);
             }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key='AIzaSyC2wHLMB2yD8Ci_hpzrUkB38_Gnudkjxi4'&callback=myMap"></script> 
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaSiQkPrt_71m-kUcvbWNWBU0ncFxQ9nw&callback=myMap"></script>
 
     </body>
 </html>
